# search-agent-tool

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
backend/: app.py
backend/agent/: content_extractor.py  web_search.py
backend/api/v1/: routes.py
backend/database/: db.py
backend/llm/: get_api.py  get_report.py
frontend/: index.html
frontend/static/css/: styles.css
frontend/static/js/: main.js
