[project]
name = "search-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "google-search-results>=2.4.2",
    "googlesearch-python>=1.3.0",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.7",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "serpapi>=0.1.5",
    "sqlmodel>=0.0.25",
    "trafilatura>=2.0.0",
    "typing>=3.10.0.0",
    "uvicorn[standard]>=0.36.0",
]
